[gd_scene load_steps=12 format=3 uid="uid://b2mbjl4b4k57c"]

[ext_resource type="Script" uid="uid://2qy7rwngvll5" path="res://Menus/credits.gd" id="1_m6n7f"]
[ext_resource type="Theme" uid="uid://bm0vssj4jk1ix" path="res://Assets/Theme/UI_theme.tres" id="2_d7jex"]
[ext_resource type="Texture2D" uid="uid://bt4y35ytc4b6w" path="res://Assets/BG.png" id="3_fldtd"]
[ext_resource type="Texture2D" uid="uid://bcr7mfakpuyeh" path="res://Assets/Button.png" id="4_h33bd"]

[sub_resource type="Animation" id="Animation_vxn86"]
resource_name = "sway"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(0.59460425, 0.61557215, 0.28717497),
"update": 0,
"values": [Vector2(626, 37), Vector2(622.885, 15.395), Vector2(626, 37)]
}

[sub_resource type="Animation" id="Animation_gn11b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(626, 37)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2k0p2"]
_data = {
&"RESET": SubResource("Animation_gn11b"),
&"sway": SubResource("Animation_vxn86")
}

[sub_resource type="Animation" id="Animation_y501u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uayf2"]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(3.1383367, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_55uyf"]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2.6390157, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_62ju1"]
_data = {
&"FadeIn": SubResource("Animation_uayf2"),
&"FadeOut": SubResource("Animation_55uyf"),
&"RESET": SubResource("Animation_y501u")
}

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m6n7f")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -7.0
offset_top = 153.0
offset_right = 1160.0
offset_bottom = 488.0
color = Color(0, 0, 0, 0.49019608)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 178.0
offset_right = 996.0
offset_bottom = 457.0
theme = ExtResource("2_d7jex")
theme_override_font_sizes/normal_font_size = 29
bbcode_enabled = true
text = "[center]Dekufox: 2D Artist & Animator
Fei: 2D Artist & Animator
Kalvyn_jr: Composer
tuxedo boy: SFX Artist
TwoFacedNecromancer: SFX Artist
magic <3:  Programmer & Concept Artist
Sergeant Sammich Cat: Programmer
Dinosaur065: Programmer
FadingFishy: Programmer"
fit_content = true

[node name="TextureRect" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(626, 37)
scale = Vector2(0.25552884, 0.25552884)
texture = ExtResource("3_fldtd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2k0p2")
}

[node name="FadePlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_62ju1")
}

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 1
layout_mode = 0
offset_right = 1164.0
offset_bottom = 654.0
color = Color(0, 0, 0, 1)

[node name="Quit" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 59.0
offset_top = 44.0
offset_right = 189.0
offset_bottom = 94.0
size_flags_vertical = 2
texture_normal = ExtResource("4_h33bd")
texture_pressed = ExtResource("4_h33bd")
stretch_mode = 0

[node name="QuitText" type="RichTextLabel" parent="Quit"]
layout_mode = 0
offset_left = 2.0
offset_top = 12.0
offset_right = 125.0
offset_bottom = 52.0
mouse_filter = 2
theme = ExtResource("2_d7jex")
bbcode_enabled = true
text = "[center]Quit[/center]
"

[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
